[tool.poetry]
name = "konjanik-auth"
version = "0.1.0"
description = ""
authors = ["Karlo <karlo@notafakeemail.wtf>"]
readme = "README.md"
packages = [{include = "konjanik_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
raiderio-async = {git = "https://github.com/karlsbjorn/raiderio-async.git"}
fastapi = "^0.109.2"
sentry-sdk = "^1.40.0"
linked-roles = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
isort = "^5.13.2"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
