[project]
name = "konjanik-auth"
version = "0.2.0"
description = ""
authors = [
  { name = "Karlo", email = "karlo@notafakeemail.wtf" }
]
readme = "README.md"
dependencies = [
    "fastapi >=0.115.12,<0.116.0",
    "sentry-sdk >=2.25.1,<3.0.0",
    "linked-roles >=1.3.2,<2.0.0",
    "discord.py >=2.5.2,<3.0.0",
    "piccolo[all] >=1.24.2,<2.0.0",
    "uvicorn (>=0.35.0,<0.36.0)",
]
requires-python = ">=3.11,<4.0"

[project.optional-dependencies]
dev = [
    "black >=24.1.1,<25.0.0",
    "ruff >=0.2.0,<1.0.0",
    "isort >=5.13.2,<6.0.0"
]

[tool.poetry.dependencies]
raiderio-async = { git = "https://github.com/karlsbjorn/raiderio-async.git" }

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
